Name:           blog
Version:        0.1
Description:    Personal blog system
License:        BSD3
License-file:   LICENSE
Author:         Luke Plant
Maintainer:     L.Plant.98@cantab.net
Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable migrate
  Build-Depends:
        base == 3.*,
        haskell98 >= 1.0.1,
        HDBC-sqlite3 >= 1.1.4,
        HDBC >= 1.1.5,
        containers,
        utf8-string,
        regex-pcre,
        template >= 0.1.1.1,
        regex-base,
        bytestring >= 0.9.1
  Main-is: Migrate.hs
  hs-source-dirs: src

Executable installdb
  Build-Depends:
        base == 3.*,
        haskell98 >= 1.0.1,
        HDBC-sqlite3 >= 1.1.4,
        HDBC >= 1.1.5
  Main-is: Installdb.hs
  hs-source-dirs: src

Executable blog.cgi
  Build-Depends:
        base == 3.*,
        haskell98 >= 1.0.1,
        HDBC-sqlite3 >= 1.1.4,
        HDBC >= 1.1.5,
        containers,
        utf8-string,
        regex-pcre,
        regex-base,
        xhtml,
        bytestring >= 0.9.1,
        ella >= 0.1.1
  Main-is: BlogCgi.hs
  hs-source-dirs: src
