Name:           blog
Version:        0.1
Description:    Personal blog system
License:        BSD3
License-file:   LICENSE
Author:         Luke Plant
Maintainer:     L.Plant.98@cantab.net
Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable migrate
  Build-Depends:
        base == 4.*,
        haskell98 >= 1.0.1,
        HDBC-sqlite3 >= 2.1.0,
        HDBC >= 2.1.0,
        containers,
        utf8-string,
        regex-pcre,
        template >= 0.1.1.1,
        regex-base,
        bytestring >= 0.9.1
  Main-is: Migrate.hs
  hs-source-dirs: src

Executable blog.cgi
  Build-Depends:
        array >= 0.1.0,
        base == 4.*,
        haskell98 >= 1.0.1,
        HDBC-sqlite3 >= 2.1.0,
        HDBC >= 2.1.0,
        convertible,
        containers,
        unix >= 2.3.0.0,
        utf8-string,
        regex-pcre,
        regex-base,
        xhtml,
        bytestring >= 0.9.1,
        old-time >= 1.0.0.0,
        old-locale >= 1.0.0.0,
        MissingH >= 1.0.2,
        pandoc >= 1.1,
        SHA >= 1.0.2,
        HStringTemplate >= 0.6,
        text >= 0.3,
        ella >= 0.1.2
  Main-is: BlogCgi.hs
  hs-source-dirs: src
  ghc-options: -O2
